--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 </html>
 
-<title>Exceptional Realty Group - Luxury Homes - About</title>
+<title>Exceptional Realty Group - Luxury Homes - About
+</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+
+
 
 <body>
   <header>
