--- a/market-report.html
+++ b/market-report.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <title>Exceptional Realty - Luxury Homes - Market Report</title>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+
   </head>
 <body> 
   
